Changelog
=========

0.7 - unreleased
----------------

- Removes reference to no longer included `html5.js`.
  [hannosch]

0.6 - 2010-11-16
----------------

- Moved `Employees` tab to the last position in the navigation bar.
  This closes https://jira.jarn.com/browse/INTRANETT-115.
  [denys, hannosch]

0.5 - 2010-11-15
----------------

- Use `z3c.unconfigure` to disable the reviewer role in the sharing page.
  [stefan]

- Make sure Description works even if some properties are None. Refs #100.
  [stefan]

0.4 - 2010-10-25
----------------

- Made biography in user preferences use rich text widget.
  [stefan, ggozad]

- Include Gocept mail server configuration into the profile. Refs #65.
  [hannosch]

- Translations basis with basic norwegian translations.
  [denys]

- Made members searchable through the catalog. 
  [ggozad, stefan]

- Adjust profile version back to `1`. We will recreate the first site from
  scratch once more.
  [hannosch]

- Extend member data to include phones, position, department, and two image
  sizes for the portraits.
  [ggozad, stefan]

- Added basic upgrade step infrastructure.
  [hannosch]

- Explicitly remove stupid default content (front-page, news, events) in tests.
  [hannosch]

- Added convenience methods to functional test case to set up a test browser.
  [hannosch]

0.3 - 2010-10-07
----------------

- Optimized CSS, KSS and JS resource merging.
  This closes https://jira.jarn.com/browse/INTRANETT-60.
  [hannosch]

- Include ``plone.app.caching`` as a dependency and configure simple caching
  for stable resources, theme resources and feeds This closes
  https://jira.jarn.com/browse/INTRANETT-76.
  [hannosch]

0.2 - 2010-10-06
----------------

- Added ``munin.zope`` and ``Products.signalstack`` as new dependencies.
  [hannosch]

0.1 - 2010-10-05
----------------

- Initial release